[ubsan] JvmLauncher.cpp:262:52: runtime error: applying non-zero offset 40 to null pointer

XMLWordPrintable

    • b08
    • aarch64
    • os_x

      When running ubsan-enabled binaries on macOS aarch64, the following issue is show e.g. in test
      tools/jpackage/macosx/ArgumentsFilteringTest.java
      src/jdk.jpackage/share/native/applauncher/JvmLauncher.cpp:262:52: runtime error: applying non-zero offset 40 to null pointer
      UndefinedBehaviorSanitizer:DEADLYSIGNAL
      UndefinedBehaviorSanitizer: nested bug in the same thread, aborting.

            Assignee:
            Alexey Semenyuk
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: