src/jdk.jpackage/share/native/applauncher/JvmLauncher.cpp
@@ -259,7 +259,8 @@ private:
 
     int initJvmlLauncherData(JvmlLauncherData* ptr) const {
         // Store path to JLI library just behind JvmlLauncherData header.
-        char* curPtr = reinterpret_cast<char*>(ptr + 1);
+        char dummy = 0;
+        char* curPtr = ptr ? reinterpret_cast<char*>(ptr + 1) : &dummy;
         {
             const size_t count = sizeof(char)
                     * (jliLibPath.size() + 1 /* trailing zero */);
@@ -304,7 +305,7 @@ private:
         curPtr = copyStrings(envVarValues, ptr,
                             offsetof(JvmlLauncherData, envVarValues), curPtr);
 
-        const size_t bufferSize = curPtr - reinterpret_cast<char*>(ptr);
+        const size_t bufferSize = curPtr - (ptr ? reinterpret_cast<char*>(ptr) : &dummy);
         if (ptr) {
             LOG_TRACE(tstrings::any() << "Initialized " << bufferSize
                                         << " bytes at " << ptr << " address");
